--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "async-array",
+  "name": "@ziggy42/async-array",
   "version": "1.0.0",
   "description": "Use async functions in array methods",
   "main": "index.js",
